Fixed UI Collision on Mobile on Projects

--- a/src/App.css
+++ b/src/App.css
@@ -160,4 +160,8 @@
   .projects-grid {
     display: inline;
   }
+
+  .project-tabs {
+    margin-top: 45px;
+  }
 }
